--- a/css/index.css
+++ b/css/index.css
@@ -12,13 +12,13 @@ body{
     margin: 0;
     background-color: black;
     color: white;
-    
+    font-size: 100%;
 }
 h2{
     font-size: 4.5em;
     margin-top: 3%;
 
-    width: max-content;
+    width: 100%vw;
     border-radius: 10%;
 }
 #content{
@@ -45,7 +45,7 @@ h3{
     font-size: 3em;
 }
 #g-img{
-    width: 60%;
+    width: 60vw;
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -58,12 +58,16 @@ h3{
     color: rgb(173, 171, 171);
     margin-top: 8vh;
     margin-bottom: 8vh;
+    background-color: #56575a5e;
+    width: 65vw;
+    padding:2vw;
+
 }
 .num{
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
     background-color: rgb(207, 149, 22);
     margin-right: 2vw;
 }
@@ -77,8 +81,8 @@ td{
     font-size: 1.5em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
     width: 10vw;
     border: black 0 solid;
     text-align: center;
@@ -89,8 +93,17 @@ tr{
 }
 table{
     background-color: rgb(139, 128, 128);
-    width: 30%;
-    margin-left: 25%;
-    margin-right: 25%;
+    width: 70vw;
+    margin-right: 25vw;
     margin-bottom: 17vh;
 }
+@media only screen and (max-width: 768px) {
+    body {
+      font-size: 50%;
+    }
+    #g-img{
+        width: 75vw;
+        margin-left: 0;
+        margin-right: 0;
+  }
+  
